added remi 2gis company

--- a/config/config.conf
+++ b/config/config.conf
@@ -20,5 +20,12 @@
     "трансеминикал",
     "миникал",
     ".*миникал"
+  ],
+  "86548":[
+    "реми*",
+    "*реми",
+    "*гис",
+    "2гис",
+    "Реми*"
   ]
 }
